added table again

--- a/table.html
+++ b/table.html
@@ -31,19 +31,12 @@
     <th>Monday</th>
     <th>Tuesday</th>
     <th>Wednesday</th>
-    <th>Thursday</th>
     <th>Friday</th>
+    <th>Saturday</th>
+    
   </tr>
-  <tr>
-    <th>8.00-9.00</th>
-    <th>9.00-10.00</th>
-    <th>10.00-11.00</th>
-    <th>11.00-12.00</th>
-    <th>1.00-2.00</th>
-    <th>2.00-3.00</th>
-  </tr>
-  <tr>
-    <td>angular</td>
+  
+    <td>8pm-9pm</td>
     <td>cloud</td>
     <td>html</td>
     <td>react</td>
@@ -51,7 +44,7 @@
     <td>css</td>
   </tr>
   <tr>
-    <td>angular</td>
+    <td>9pm-10pm</td>
     <td>html</td>
     <td>cloud</td>
     <td>react</td>
@@ -59,7 +52,23 @@
     <td>devops</td>
   </tr>
   <tr>
-    <td>angular</td>
+    <td>10pm-11pm</td>
+    <td>css</td>
+    <td>react</td>
+    <td>cloud</td>
+    <td>devops</td>
+    <td>html</td>
+  </tr>
+  <tr>
+    <td>11pm-12pm</td>
+    <td>css</td>
+    <td>react</td>
+    <td>cloud</td>
+    <td>devops</td>
+    <td>html</td>
+  </tr>
+  <tr>
+    <td>12pm-1pm</td>
     <td>css</td>
     <td>react</td>
     <td>cloud</td>
